[update] update logging and logic
[✅] Login Web : เพิ่มการ log in ด้วย web (username, password)
[✅] SearchSaleOrder : Search SoNo,OrderNo เพิ่มการค้นหา OrderNo และ เปลี่ยนชื่อเป็น SearchOrder(All - สามารถเพิ่มการหาข้อมูลอื่นๆ ได้)
[✅] edit logic CancelSaleReturn : สร้าง CancelID ใน CancelStatus ก่อนถึงจะนำ CancelID INSERT ลงใน HEAD
[✅] log config : แก้ไฟล์ /logs/logs.go และ main.go : เพิ่มการเรียก serviceName
